Add reviewable doctor profile assets